# Arknights

./: .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  start.bat  start.ps1  start.sh
.github/workflows/: deploy-pages.yml
arknights_planner/: __init__.py  __main__.py  data.py  planner.py
arknights_planner/application/: __init__.py  planning_service.py
arknights_planner/domain/: __init__.py  models.py
arknights_planner/infrastructure/: __init__.py  config.py  json_storage.py  material_catalog.py
arknights_planner/presentation/: __init__.py  cli.py  gui.py  web.py
arknights_planner/presentation/static/: app.js  index.html  styles.css
data/: import.json  weight.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  assets.js  inventoryExamples.js  planner.js  plannerData.js  styles.css
tests/: test_planner.py
